tests/unit/default/syntax-error/090-add-pk-table-parens-name.x.t
---- IN ----
+PK%table(id|
---- OUT ----
---- ERR ----
syntax: expected `)` after `+PK%table(id` near `|` at position 12 - at line 1
---- EXIT ----
1
